welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: '(' expected but identifier found.
if estSurMessage() {
   ^BDRBuggle:6: error: illegal start of simple expression
	}
        ^